# stix-rust

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/agents/: java-binding.md  python-binding.md  rust-core.md  typescript-node-binding.md  typescript-wasm-binding.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
bindings/java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bindings/java/rust/: Cargo.toml
bindings/java/rust/src/: lib.rs
bindings/java/src/main/java/io/github/benjaminsmall/stix/: Bundle.java  Engine.java  MatchException.java  MatchResult.java  ModelException.java  NativeLoader.java  ParseException.java  Pattern.java  StixException.java  ValidationException.java
bindings/java/src/test/java/io/github/benjaminsmall/stix/: StixTest.java
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/stix/: __init__.py  __init__.pyi
bindings/python/src/: engine.rs  errors.rs  handles.rs  lib.rs
bindings/python/tests/: test_stix.py
bindings/typescript-node/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
bindings/typescript-node/src/: lib.rs
bindings/typescript-node/tests/: stix.test.ts
bindings/typescript-node/ts/: index.ts
bindings/typescript-wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
bindings/typescript-wasm/src/: lib.rs
bindings/typescript-wasm/tests/: stix.test.ts
bindings/typescript-wasm/ts/: errors.ts  index.ts
crates/stix/: Cargo.toml
crates/stix-ffi/: Cargo.toml
crates/stix-ffi/src/: engine.rs  error.rs  handles.rs  lib.rs
crates/stix-ffi/tests/: facade.rs
crates/stix-matcher/: Cargo.toml
crates/stix-matcher/src/: compare.rs  error.rs  eval.rs  lib.rs  observation.rs  pattern_ops.rs  resolve.rs  result.rs  subset.rs
crates/stix-matcher/tests/: integration.rs
crates/stix-matcher/tests/fixtures/: bundle.json
crates/stix-model/: Cargo.toml
crates/stix-model/src/: bundle.rs  error.rs  lib.rs  object.rs  registry.rs  sdo.rs  store.rs  value.rs  version.rs  view.rs
crates/stix-model/tests/: integration.rs
crates/stix-model/tests/fixtures/: bundle.json
crates/stix-pattern/: Cargo.toml
crates/stix-pattern/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/stix-pattern/tests/: conformance.rs  roundtrip.rs
crates/stix-pattern/tests/fixtures/: invalid_patterns.txt  valid_patterns.txt
crates/stix/examples/: custom_model.rs
crates/stix/src/: lib.rs
crates/stix/tests/: custom_models.rs
docs/superpowers/plans/: 2026-06-28-custom-models.md  2026-06-28-stix-matcher.md  2026-06-28-stix-model.md  2026-06-28-stix-pattern.md  2026-06-29-java-binding.md  2026-06-29-python-binding.md  2026-06-29-repo-operating-model.md  2026-06-29-stix-ffi-facade.md  2026-06-29-typescript-node-binding.md  2026-06-29-typescript-wasm-binding.md
docs/superpowers/specs/: 2026-06-28-custom-models-design.md  2026-06-28-stix-rust-parser-design.md  2026-06-29-java-binding-design.md  2026-06-29-python-binding-design.md  2026-06-29-repo-operating-model-design.md  2026-06-29-stix-ffi-facade-design.md  2026-06-29-typescript-bindings-design.md
