[workspace]
resolver = "2"
members = ["crates/stix-pattern", "crates/stix-model", "crates/stix-matcher", "crates/stix", "crates/stix-ffi"]
exclude = ["bindings/python", "bindings/typescript-node", "bindings/typescript-wasm", "bindings/java/rust"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benjamin-small/stix-rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
stix-pattern = { path = "crates/stix-pattern" }
stix-model = { path = "crates/stix-model" }
stix-matcher = { path = "crates/stix-matcher" }
stix = { path = "crates/stix" }
