[package]
name = "stix-python"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benjamin-small/stix-rust"
description = "Python bindings for the stix-rust toolkit."

[lib]
name = "_stix"
crate-type = ["cdylib"]

[dependencies]
stix-ffi = { path = "../../crates/stix-ffi" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
pythonize = "0.29"
serde_json = "1"
