# Standalone workspace: this crate is intentionally excluded from the repo
# root workspace. The empty `[workspace]` table stops Cargo's upward manifest
# walk (needed because git worktrees nest under the main checkout, whose root
# workspace would otherwise claim this crate).
[workspace]

[package]
name = "stix-node"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
stix-ffi = { path = "../../crates/stix-ffi" }
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
