[package]
name = "stix-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# Standalone crate: kept out of the root Cargo workspace so wasm-pack builds it
# independently. (The root workspace already excludes this path; the empty table
# below also detaches it when the crate lives in a nested worktree.)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
stix-ffi = { path = "../../crates/stix-ffi" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde_json = "1"
