[package]
name = "stix-ffi"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI-friendly facade over the stix toolkit, wrapped by the language bindings."

[dependencies]
stix = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
