[package]
name = "stix-model"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "STIX 2.1 object model: values, objects, bundles, and an object store."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
