[package]
name = "stix"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Umbrella crate for the stix-rust toolkit."

[dependencies]
stix-pattern = { workspace = true }
stix-model = { workspace = true }
stix-matcher = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
